--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>Buttons Awesome Hover Effects</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!--A simple button hover effect using html css only -->
 
-    <link rel="stylesheet" type="text/css" src="style.css"  >
 </head>
 
 <body>
     <div class="container">
-        <button class="btn btn1">Hover Me</button>
-        <button class="btn btn2">Hover Me</button>
-        <button class="btn btn3">Hover Me</button>
-        <button class="btn btn4">Hover Me</button>
+        <button type="button" class="btn btn1">Hover me</button>
+        <button type="button" class="btn btn2">Hover me</button>
+        <button type="button" class="btn btn3">Hover me</button>
+        <button type="button" class="btn btn4">Hover me</button>
     </div>
 
 
